--- a/client-web/src/main/resources/templates/dashboard.html
+++ b/client-web/src/main/resources/templates/dashboard.html
@@ -1,1 +1,9 @@
 <!-- Dashboard HTML -->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head><title>Dashboard</title></head>
+<body>
+<h2>Welcome, <span th:text="${username}"></span>!</h2>
+<p>Your API says: <span th:text="${apiData}"></span></p>
+</body>
+</html>
