--- a/client-web/src/main/resources/templates/login.html
+++ b/client-web/src/main/resources/templates/login.html
@@ -1,1 +1,14 @@
 <!-- Login HTML -->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head><title>Login</title></head>
+<body>
+<h2>Login</h2>
+<form method="post" action="/login">
+    <label>Username: <input type="text" name="username"/></label><br/>
+    <label>Password: <input type="password" name="password"/></label><br/>
+    <button type="submit">Login</button>
+</form>
+<p th:if="${error}" th:text="${error}" style="color:red;"></p>
+</body>
+</html>
